update display data

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 <body>
     <div id="menuContainer"></div>
-    <div id='addContainer'>
+    <!-- <div id='addContainer'>
         <input type="text" id="item" placeholder="add item">
         <button id="addButton">add</button>
+    </div> -->
+    <div id='addPizzaContainer'>
+        <input type="text" id="itemPizza" placeholder="add Pizza" class="">
+        <button id="addPizza">add</button>
     </div>
     </div>
 </body>
