--- a/index.html
+++ b/index.html
@@ -7,52 +7,23 @@
 
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.1/firebase-ui-auth.css" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="menuContainer"></div>
-    <!-- <div id='addContainer'>
-        <input type="text" id="item" placeholder="add item">
-        <button id="addButton">add</button>
-    </div> -->
-    <div id='addPizzaContainer'>
-        <input type="text" id="itemPizza" placeholder="add Pizza" class="">
-        <button id="addPizza">add</button>
-    </div>
+    <div id="menuContainer">
+        <div id="Other">
+            <div class='addContainer'>
+                <input type="text" id="item" placeholder="add item">
+                <button id="addButton">add</button>
+            </div>
+        </div>
+        <div id='pizzaContainer'>
+            <div class="addContainer">
+                <input type="text" id="itemPizza" placeholder="add Pizza" class="">
+                <button id="addPizza">add</button>
+            </div>
+        </div>
     </div>
 </body>
-<script type="module">
-    // Import the functions you need from the SDKs you need
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-analytics.js";
-    //   import { }
-    // TODO: Add SDKs for Firebase products that you want to use
-    // https://firebase.google.com/docs/web/setup#available-libraries
-
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-        apiKey: "AIzaSyCkINLqzwllGDnEYTjK3TA4STSgwgs438c",
-        authDomain: "piddz-5de75.firebaseapp.com",
-        databaseURL: "https://piddz-5de75-default-rtdb.firebaseio.com",
-        projectId: "piddz-5de75",
-        storageBucket: "piddz-5de75.firebasestorage.app",
-        messagingSenderId: "1006827305493",
-        appId: "1:1006827305493:web:064d16ab5f5bb80e16ec1c",
-        measurementId: "G-9YM8L6TS3X"
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const analytics = getAnalytics(app);
-    // Initialize the FirebaseUI Widget using Firebase.
-    // var ui = new firebaseui.auth.AuthUI(firebase.auth());
-
-    //   ui.start('#firebaseui-auth-container', {
-    //   signInOptions: [
-    //     firebase.auth.EmailAuthProvider.PROVIDER_ID
-    //   ],
-    //   // Other config options...
-    // });
-</script>
 <script type="module" src="app.js"></script>
 </html>
