slight menu changes

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <button id="addButton">add</button>
             </div>
         </div>
+        <div id="pizzaMenu">
+            <div class="addContainer">
+                <input type="text" id="itemPizzaMenu" placeholder="add Pizza">
+                <button id="addPizzaMenu">add</button>
+            </div>
+        </div>
         <div id='pizzaContainer'>
             <div class="addContainer">
                 <input type="text" id="itemPizza" placeholder="add Pizza" class="">
