--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
 </head>
 <body>
     <div id="menuContainer">
-        <div id="Other">
+        <div id="otherContainer">
             <div class='addContainer'>
                 <input type="text" id="item" placeholder="add item">
                 <button id="addButton">add</button>
             </div>
         </div>
-        <div id="pizzaMenu">
+        <div id="pizzaContainer">
             <div class="addContainer">
                 <input type="text" id="itemPizzaMenu" placeholder="add Pizza">
                 <button id="addPizzaMenu">add</button>
             </div>
         </div>
-        <div id='pizzaContainer'>
-            <div class="addContainer">
-                <input type="text" id="itemPizza" placeholder="add Pizza" class="">
-                <button id="addPizza">add</button>
-            </div>
+        <div id='ingredientContainer'>
         </div>
     </div>
 </body>
