update in progress

--- a/index.html
+++ b/index.html
@@ -17,14 +17,8 @@
                 <button id="addButton">add</button>
             </div>
         </div>
-        <div id="pizzaContainer">
-            <div class="addContainer">
-                <input type="text" id="itemPizzaMenu" placeholder="add Pizza">
-                <button id="addPizzaMenu">add</button>
-            </div>
-        </div>
-        <div id='ingredientContainer'>
-        </div>
+        <div id="pizzaContainer"></div>
+        <div id='ingredientContainer'></div>
     </div>
 </body>
 <script type="module" src="app.js"></script>
