--- a/dashboard.html
+++ b/dashboard.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <div id="menuContainer">
-        <div id="otherContainer">
-            <div class='addContainer'>
-                <input type="text" id="item" placeholder="add item">
-                <button id="addButton">add</button>
+        <div id="menuListContainer">
+            <span>MENU</span>
+            <div id="menuList">
+
             </div>
         </div>
-        <div id="pizzaContainer"></div>
-        <div id='ingredientContainer'></div>
+        <div id="editContainer"></div>
+        <div id='createContainer'></div>
     </div>
 </body>
-<script type="module" src="app.js"></script>
+<script type="module" src="dashboard.js"></script>
 </html>
